--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professor Homepage</title>
+    <title>News about Haiwei Dong</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -46,8 +46,9 @@
 <body>
 <div class="container">
     <div class="bio">
-        <h1>Professor Name</h1>
-        <p>Short bio about the professor, including academic background, research interests, and notable achievements.</p>
+        <h1>Haiwei Dong</h1>
+        <p>Haiwei Dong (haiwei.dong@ieee.org) is currently a Principal Researcher and Director with Huawei Canada, and an Adjunct Professor with the University of Ottawa. He was a Principal Engineer with Artificial Intelligence Competency Center, Huawei Technologies Canada, Toronto, ON, Canada, a Research Scientist with the University of Ottawa, Ottawa, ON, Canada, a Postdoctoral Fellow with New York University, New York City, NY, USA, a Research Associate with the University of Toronto, Toronto, ON, Canada, and a Research Fellow (PD) with the Japan Society for the Promotion of Science, Tokyo, Japan. He received the Ph.D. degree from Kobe University, Kobe, Japan in 2010 and the M.Eng. degree from Shanghai Jiao Tong University, Shanghai, China, in 2008. He is a Senior Member of IEEE, a Senior Member of ACM, and a registered Professional Engineer in Ontario. His research interests include artificial intelligence, multimedia, metaverse, and robotics. He also serves as a Column Editor of IEEE Multimedia Magazine; an Associate Editor of ACM Transactions on Multimedia Computing, Communications, and Applications; and an Associate Editor of IEEE Consumer Electronics Magazine.
+</p>
         <div class="news">
             <h2>Latest News</h2>
             <ul>
@@ -58,7 +59,7 @@
         </div>
     </div>
     <div class="photo">
-        <img src="photo.jpg" alt="Professor Photo">
+        <img src="haiwei-dong.jpg" alt="Professor Photo">
     </div>
 </div>
 </body>
