--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </div>
     <div class="photo">
-        <img src="haiwei-dong.jpg" alt="Professor Photo">
+        <img src="haiwei_dong.jpg" alt="Professor Photo">
     </div>
 </div>
 </body>
