--- a/index.html
+++ b/index.html
@@ -47,15 +47,20 @@
 <div class="container">
     <div class="bio">
         <h1>Haiwei Dong</h1>
-        <p>Haiwei Dong (haiwei.dong@ieee.org) is currently a Principal Researcher and Director with Huawei Canada, and an Adjunct Professor with the University of Ottawa. He was a Principal Engineer with Artificial Intelligence Competency Center, Huawei Technologies Canada, Toronto, ON, Canada, a Research Scientist with the University of Ottawa, Ottawa, ON, Canada, a Postdoctoral Fellow with New York University, New York City, NY, USA, a Research Associate with the University of Toronto, Toronto, ON, Canada, and a Research Fellow (PD) with the Japan Society for the Promotion of Science, Tokyo, Japan. He received the Ph.D. degree from Kobe University, Kobe, Japan in 2010 and the M.Eng. degree from Shanghai Jiao Tong University, Shanghai, China, in 2008. He is a Senior Member of IEEE, a Senior Member of ACM, and a registered Professional Engineer in Ontario. His research interests include artificial intelligence, multimedia, metaverse, and robotics. He also serves as a Column Editor of IEEE Multimedia Magazine; an Associate Editor of ACM Transactions on Multimedia Computing, Communications, and Applications; and an Associate Editor of IEEE Consumer Electronics Magazine.
+        <p>Haiwei Dong is currently a Principal Researcher and Director with Huawei Canada, and an Adjunct Professor with the University of Ottawa. He was a Principal Engineer with Artificial Intelligence Competency Center, Huawei Technologies Canada, Toronto, ON, Canada, a Research Scientist with the University of Ottawa, Ottawa, ON, Canada, a Postdoctoral Fellow with New York University, New York City, NY, USA, a Research Associate with the University of Toronto, Toronto, ON, Canada, and a Research Fellow (PD) with the Japan Society for the Promotion of Science, Tokyo, Japan. He received the Ph.D. degree from Kobe University, Kobe, Japan in 2010 and the M.Eng. degree from Shanghai Jiao Tong University, Shanghai, China, in 2008. He is a Senior Member of IEEE, a Senior Member of ACM, and a registered Professional Engineer in Ontario. His research interests include artificial intelligence, multimedia, metaverse, and robotics. He also serves as a Column Editor of IEEE Multimedia Magazine; an Associate Editor of ACM Transactions on Multimedia Computing, Communications, and Applications; and an Associate Editor of IEEE Consumer Electronics Magazine.
 </p>
         <div class="news">
             <h2>Latest News</h2>
             <ul>
-                <li>News item 1</li>
-                <li>News item 2</li>
-                <li>News item 3</li>
+                <li>2025.02 A paper accepted by IEEE Network.</li>
+                <li>2025.02 Accepted invitation to become Industry Chair in ACM Multimedia 2025. 2</li>
+                <li>2025.02 A survey paper accepted by ACM Transactions on Multimedia Computing, Communications, and Applications.</li>
             </ul>
+        </div>
+        <div class="contact">
+            <h2>Contact</h2>
+            <p>Email: hdong@uottawa.ca</p>
+            <p>Address: 800 King Edward Ave. Ottawa, ON, Canada K1N 6N5</p>
         </div>
     </div>
     <div class="photo">
