--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="container">
         <div class="main-content">
             <div class="about-section">
-                <img src="images/haiwei_dong.jpg" alt="Professor Haiwei Dong">
+                <img src="haiwei_dong.jpg" alt="Professor Haiwei Dong">
                 <div>
                     <h2>About Me</h2>
                     <p>
