--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             color: #666666;
         }
         .banner {
-            background: url('https://images.unsplash.com/photo-1501555088652-021faa106b9b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1100&q=80') no-repeat center center;
+            background: url('https://assets.obj.ca/2023/10/uOttawa-sign.jpg') no-repeat center center;
             background-size: cover;
             padding: 60px 20px;
             text-align: center;
