--- a/index.html
+++ b/index.html
@@ -162,17 +162,28 @@
                 <div>
                     <h2>About Me</h2>
                     <p>
-                        Welcome! I am Professor Haiwei Dong, an Adjunct Professor at the University of Ottawa and Principal Researcher at Huawei Technologies Canada. 
-                        My work focuses on artificial intelligence, multimedia computing, and robotics, driving innovation for a smarter future. 
-                        With over 90 publications, I am passionate about research and education.
+                        Welcome! Haiwei Dong is currently a Principal Researcher and Director with Huawei Canada, 
+                        and an Adjunct Professor with the University of Ottawa. 
+                        He was a Principal Engineer with Artificial Intelligence Competency Center, Huawei Technologies Canada, Toronto, ON, Canada, 
+                        a Research Scientist with the University of Ottawa, Ottawa, ON, Canada, 
+                        a Postdoctoral Fellow with New York University, New York City, NY, USA, 
+                        a Research Associate with the University of Toronto, Toronto, ON, Canada, 
+                        and a Research Fellow (PD) with the Japan Society for the Promotion of Science, Tokyo, Japan. 
+                        He received the Ph.D. degree from Kobe University, Kobe, Japan in 2010 and the M.Eng. degree from Shanghai Jiao Tong University, Shanghai, China, in 2008. 
+                        He is a Senior Member of IEEE, a Senior Member of ACM, and a registered Professional Engineer in Ontario. 
+                        He also serves as a Column Editor of IEEE Multimedia Magazine; 
+                        an Associate Editor of ACM Transactions on Multimedia Computing, Communications, and Applications; 
+                        and an Associate Editor of IEEE Consumer Electronics Magazine.
                     </p>
                 </div>
             </div>
             <h2>Research Interests</h2>
             <ul>
-                <li>Artificial Intelligence and Machine Learning</li>
-                <li>Multimedia Communication and Processing</li>
-                <li>Robotics and Autonomous Systems</li>
+                <li>Artificial Intelligence</li>
+                <li>Multimedia Communication and Computing</li>
+                <li>Digital Twin</li>
+                <li>Metaverse</li>
+                <li>Robotics</li>
             </ul>
         </div>
 
