--- a/index.html
+++ b/index.html
@@ -162,17 +162,15 @@
                 <div>
                     <h2>About Me</h2>
                     <p>
-                        Welcome! Haiwei Dong is currently a Principal Researcher and Director with Huawei Canada, 
-                        and an Adjunct Professor with the University of Ottawa. 
-                        He was a Principal Engineer with Artificial Intelligence Competency Center, Huawei Technologies Canada, Toronto, ON, Canada, 
-                        a Research Scientist with the University of Ottawa, Ottawa, ON, Canada, 
-                        a Postdoctoral Fellow with New York University, New York City, NY, USA, 
-                        a Research Associate with the University of Toronto, Toronto, ON, Canada, 
-                        and a Research Fellow (PD) with the Japan Society for the Promotion of Science, Tokyo, Japan. 
-                        He received the Ph.D. degree from Kobe University, Kobe, Japan in 2010 and the M.Eng. degree from Shanghai Jiao Tong University, Shanghai, China, in 2008. 
-                        He is a Senior Member of IEEE, a Senior Member of ACM, and a registered Professional Engineer in Ontario. 
-                        He also serves as a Column Editor of IEEE Multimedia Magazine; 
-                        an Associate Editor of ACM Transactions on Multimedia Computing, Communications, and Applications; 
+                        Welcome! I am currently a Principal Researcher and Director with Huawei Canada and an Adjunct Professor with the University of Ottawa. 
+                        Previously, I held roles as Principal Engineer at the Artificial Intelligence Competency Center at Huawei Technologies Canada, 
+                        Research Scientist at the University of Ottawa, Postdoctoral Fellow at New York University, 
+                        Research Associate at the University of Toronto, 
+                        and Research Fellow (PD) with the Japan Society for the Promotion of Science. 
+                        I received my Ph.D. degree from Kobe University in 2010 and my M.Eng. degree from Shanghai Jiao Tong University in 2008. 
+                        I am a Senior Member of IEEE, a Senior Member of ACM, and a registered Professional Engineer in Ontario. 
+                        Additionally, I serve as a Column Editor of IEEE Multimedia Magazine, 
+                        an Associate Editor of ACM Transactions on Multimedia Computing, Communications, and Applications, 
                         and an Associate Editor of IEEE Consumer Electronics Magazine.
                     </p>
                 </div>
@@ -190,19 +188,19 @@
         <div class="sidebar">
             <h2>Recent News</h2>
             <div class="news-item">
-                <strong>February 15, 2025:</strong> 
-                <span>Delivered keynote at IEEE Conference on AI Innovations about Multimodal AI.</span>
+                <strong>February, 2025:</strong> 
+                <span>Published paper in IEEE Network</span>
             </div>
             <div class="news-item">
-                <strong>January 10, 2025:</strong> 
-                <span>Published paper in IEEE Transactions on Multimedia on Metaverse Streaming.</span>
+                <strong>February, 2025:</strong> 
+                <span>Published paper in ACM Transactions on Multimedia Computing, Communications, and Applications.</span>
             </div>
             <div class="news-item">
-                <strong>December 5, 2024:</strong> 
-                <span>Received IEEE Technical Achievement Award for AI and Smart Grid contributions.</span>
+                <strong>Februray, 2025:</strong> 
+                <span>Accepted invitation to be Industry Chair in ACM Multimedia 2025.</span>
             </div>
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:haiwei.dong@uottawa.ca">haiwei.dong@uottawa.ca</a></p>
+            <p>Email: <a href="mailto:hdong@uottawa.ca">haiwei.dong@uottawa.ca</a></p>
             <p>Office: SITE Building, Room 5032</p>
             <p>Phone: (613) 562-5800 ext. 1234</p>
         </div>
