--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             color: #666666;
         }
         .banner {
-            background: img src="ottawa_university.jpg" alt="University of Ottawa" no-repeat center center;
+            background: img src="ottawa-university.jpg" alt="University of Ottawa" no-repeat center center;
             background-size: cover;
             padding: 60px 20px;
             text-align: center;
