--- a/index.html
+++ b/index.html
@@ -187,20 +187,37 @@
 
         <div class="sidebar">
             <h2>Recent News</h2>
-            <div class="news-item">
-                <strong>February, 2025:</strong> 
-                <span>Published paper in IEEE Network</span>
+            <div class="news-list">
+                <div class="news-item">
+                    <strong>February, 2025:</strong> 
+                    <span>Delivered keynote at IEEE Conference on AI Innovations about Multimodal AI.</span>
+                </div>
+                <div class="news-item">
+                    <strong>January, 2025:</strong> 
+                    <span>Published paper in IEEE Transactions on Multimedia on Metaverse Streaming.</span>
+                </div>
+                <div class="news-item">
+                    <strong>February, 2025:</strong> 
+                    <span>Received IEEE Technical Achievement Award for AI and Smart Grid contributions.</span>
+                </div>
+                <div class="news-item">
+                    <strong>November 20, 2024:</strong> 
+                    <span>Collaborated on a new AI project with Huawei on autonomous systems.</span>
+                </div>
+                <div class="news-item">
+                    <strong>October 15, 2024:</strong> 
+                    <span>Spoke at the University of Ottawa AI Symposium on robotics.</span>
+                </div>
+                <div class="news-item">
+                    <strong>September 10, 2024:</strong> 
+                    <span>Published article in Journal of Robotics on human-robot interaction.</span>
+                </div>
             </div>
-            <div class="news-item">
-                <strong>February, 2025:</strong> 
-                <span>Published paper in ACM Transactions on Multimedia Computing, Communications, and Applications.</span>
-            </div>
-            <div class="news-item">
-                <strong>Februray, 2025:</strong> 
-                <span>Accepted invitation to be Industry Chair in ACM Multimedia 2025.</span>
+            <div class="read-more">
+                <a href="#">Read more</a>
             </div>
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:hdong@uottawa.ca">haiwei.dong@uottawa.ca</a></p>
+            <p>Email: <a href="mailto:haiwei.dong@uottawa.ca">haiwei.dong@uottawa.ca</a></p>
             <p>Office: SITE Building, Room 5032</p>
             <p>Phone: (613) 562-5800 ext. 1234</p>
         </div>
