--- a/index.html
+++ b/index.html
@@ -212,6 +212,30 @@
                     <strong>September 10, 2024:</strong> 
                     <span>Published article in Journal of Robotics on human-robot interaction.</span>
                 </div>
+                <div class="news-item">
+                    <strong>February, 2025:</strong> 
+                    <span>Delivered keynote at IEEE Conference on AI Innovations about Multimodal AI.</span>
+                </div>
+                <div class="news-item">
+                    <strong>January, 2025:</strong> 
+                    <span>Published paper in IEEE Transactions on Multimedia on Metaverse Streaming.</span>
+                </div>
+                <div class="news-item">
+                    <strong>February, 2025:</strong> 
+                    <span>Received IEEE Technical Achievement Award for AI and Smart Grid contributions.</span>
+                </div>
+                <div class="news-item">
+                    <strong>November 20, 2024:</strong> 
+                    <span>Collaborated on a new AI project with Huawei on autonomous systems.</span>
+                </div>
+                <div class="news-item">
+                    <strong>October 15, 2024:</strong> 
+                    <span>Spoke at the University of Ottawa AI Symposium on robotics.</span>
+                </div>
+                <div class="news-item">
+                    <strong>September 10, 2024:</strong> 
+                    <span>Published article in Journal of Robotics on human-robot interaction.</span>
+                </div>
             </div>
             <div class="read-more">
                 <a href="#">Read more</a>
