--- a/index.html
+++ b/index.html
@@ -101,6 +101,23 @@
         .news-item strong {
             color: #9A1D34;
         }
+        .news-list {
+            counter-reset: news-counter;
+        }
+        .news-item:nth-child(n+6) {
+            display: none;
+        }
+        .news-list.show-all .news-item {
+            display: block;
+        }
+        .read-more {
+            display: none;
+            margin-top: 15px;
+            text-align: right;
+        }
+        .news-list:has(.news-item:nth-child(6)) ~ .read-more {
+            display: block;
+        }
         ul {
             list-style: none;
             padding: 0;
@@ -158,7 +175,7 @@
     <div class="container">
         <div class="main-content">
             <div class="about-section">
-                <img src="haiwei_dong.jpg" alt="Professor Haiwei Dong">
+                <img src="images/haiwei_dong.jpg" alt="Professor Haiwei Dong">
                 <div>
                     <h2>About Me</h2>
                     <p>
@@ -177,51 +194,25 @@
             </div>
             <h2>Research Interests</h2>
             <ul>
-                <li>Artificial Intelligence</li>
-                <li>Multimedia Communication and Computing</li>
-                <li>Digital Twin</li>
-                <li>Metaverse</li>
-                <li>Robotics</li>
+                <li>Artificial Intelligence and Machine Learning</li>
+                <li>Multimedia Communication and Processing</li>
+                <li>Robotics and Autonomous Systems</li>
             </ul>
         </div>
 
         <div class="sidebar">
             <h2>Recent News</h2>
-            <div class="news-list">
+            <div class="news-list" id="newsList">
                 <div class="news-item">
-                    <strong>February, 2025:</strong> 
+                    <strong>February 15, 2025:</strong> 
                     <span>Delivered keynote at IEEE Conference on AI Innovations about Multimodal AI.</span>
                 </div>
                 <div class="news-item">
-                    <strong>January, 2025:</strong> 
+                    <strong>January 10, 2025:</strong> 
                     <span>Published paper in IEEE Transactions on Multimedia on Metaverse Streaming.</span>
                 </div>
                 <div class="news-item">
-                    <strong>February, 2025:</strong> 
-                    <span>Received IEEE Technical Achievement Award for AI and Smart Grid contributions.</span>
-                </div>
-                <div class="news-item">
-                    <strong>November 20, 2024:</strong> 
-                    <span>Collaborated on a new AI project with Huawei on autonomous systems.</span>
-                </div>
-                <div class="news-item">
-                    <strong>October 15, 2024:</strong> 
-                    <span>Spoke at the University of Ottawa AI Symposium on robotics.</span>
-                </div>
-                <div class="news-item">
-                    <strong>September 10, 2024:</strong> 
-                    <span>Published article in Journal of Robotics on human-robot interaction.</span>
-                </div>
-                <div class="news-item">
-                    <strong>February, 2025:</strong> 
-                    <span>Delivered keynote at IEEE Conference on AI Innovations about Multimodal AI.</span>
-                </div>
-                <div class="news-item">
-                    <strong>January, 2025:</strong> 
-                    <span>Published paper in IEEE Transactions on Multimedia on Metaverse Streaming.</span>
-                </div>
-                <div class="news-item">
-                    <strong>February, 2025:</strong> 
+                    <strong>December 5, 2024:</strong> 
                     <span>Received IEEE Technical Achievement Award for AI and Smart Grid contributions.</span>
                 </div>
                 <div class="news-item">
@@ -238,7 +229,7 @@
                 </div>
             </div>
             <div class="read-more">
-                <a href="#">Read more</a>
+                <a href="#" id="toggleNews">Read more</a>
             </div>
             <h2>Contact</h2>
             <p>Email: <a href="mailto:haiwei.dong@uottawa.ca">haiwei.dong@uottawa.ca</a></p>
@@ -250,5 +241,21 @@
     <footer>
         <p>© 2025 University of Ottawa | Professor Haiwei Dong | All Rights Reserved</p>
     </footer>
+
+    <script>
+        const toggleNewsLink = document.getElementById('toggleNews');
+        const newsList = document.getElementById('newsList');
+
+        toggleNewsLink.addEventListener('click', (e) => {
+            e.preventDefault(); // Prevent default link behavior
+            if (newsList.classList.contains('show-all')) {
+                newsList.classList.remove('show-all');
+                toggleNewsLink.textContent = 'Read more';
+            } else {
+                newsList.classList.add('show-all');
+                toggleNewsLink.textContent = 'Show less';
+            }
+        });
+    </script>
 </body>
 </html>
