--- a/index.html
+++ b/index.html
@@ -194,8 +194,10 @@
             </div>
             <h2>Research Interests</h2>
             <ul>
-                <li>Artificial Intelligence and Machine Learning</li>
-                <li>Multimedia Communication and Processing</li>
+                <li>Artificial Intelligence</li>
+                <li>Multimedia Communication and Computing</li>
+                <li>Digital Twins</li>
+                <li>Metaverse</li>
                 <li>Robotics and Autonomous Systems</li>
             </ul>
         </div>
