--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             align-items: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+        .header img.logo {
+            max-width: 130px;
+            margin-left: 20px;
+        }
         .logo {
             font-size: 1.5em;
             font-weight: bold;
@@ -164,6 +168,7 @@
 </head>
 <body>
     <header>
+        <img src="uottawa_log.png" alt="KW Integrity Realty" class="logo"> <!-- Replace with your logo path -->
         <div class="logo">u<span>Ottawa</span></div>
     </header>
 
