--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 </head>
 <body>
     <header>
-        <img src="uottawa_logo.png" alt="UOttawa Logo" class="logo"> <!-- Replace with your logo path -->
+        <img src="uottawa-logo.png" alt="UOttawa Logo" class="logo"> <!-- Replace with your logo path -->
         <div class="logo">u<span>Ottawa</span></div>
     </header>
 
