--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 </head>
 <body>
     <header>
-        <img src="University_of_Ottawa_Logo.png" alt="UOttawa Logo" class="logo"> <!-- Replace with your logo path -->
+        <!-- <img src="University_of_Ottawa_Logo.png" alt="UOttawa Logo" class="logo"> Replace with your logo path -->
         <div class="logo">u<span>Ottawa</span></div>
     </header>
 
