--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <body>
     <header>
         <!-- <img src="University_of_Ottawa_Logo.png" alt="UOttawa Logo" class="logo"> Replace with your logo path -->
-        <div class="logo">u<span>Ottawa</span></div>
+        <div class="logo">University of Ottawa<span></span></div>
     </header>
 
     <div class="banner">
