--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
             <h2>Recent News</h2>
             <div class="news-list" id="newsList">
                 <div class="news-item">
+                    <strong>March 5, 2025:</strong> 
+                    <span>Published paper in IEEE Consumer Electronics Magazine about large-scale environment scanning. Congratulations to Mengyuan!</span>
+                </div>
+                <div class="news-item">
                     <strong>February, 2025:</strong> 
                     <span>Published paper in IEEE Network.</span>
                 </div>
