--- a/publications.html
+++ b/publications.html
@@ -107,6 +107,11 @@
             <h1>Recent Publications</h1>
             <ol class="publications-list">
                 <li>
+                    <strong>"Empirical studies of large scale environment scanning "</strong><br>
+                    Mengyuan Wang, Yang Liu, Haopeng Wang, Haiwei Dong*, Abdulmotaleb El Saddik<br>
+                    <em>IEEE Consumer Electronics Magazine</em>, 2025 (accepted)
+                </li>
+                <li>
                     <strong>"Generative-AI for XR content transmission in the metaverse: Potential approaches, challenges, and a generation-driven transmission framework"</strong><br>
                     Zhe Zhang, Yili Jiang, Xin Wei, Mingkai Chen, Haiwei Dong, Shui Yu<br>
                     <em>IEEE Network</em>, 2025 (accepted)
