--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <h2>Contact</h2>
             <p>Email: <a href="mailto:hdong@uottawa.ca">hdong@uottawa.ca</a></p>
             <p>Office: SITE Building, Room 5032</p>
-            <p>Phone: (613) 562-5800 ext. 1234</p>
+            <p>Phone: (613) 562-5700</p>
         </div>
     </div>
 
