--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="news-list" id="newsList">
                 <div class="news-item">
                     <strong>March 12, 2025:</strong> 
-                    <span>Gave two keynote speeches about AI for Networking in Johannesburg, South Africa.</span>
+                    <span>Delivered two keynote speeches on AI for Networking in Johannesburg, South Africa.</span>
                 </div>
                 <div class="news-item">
                     <strong>March 5, 2025:</strong> 
