--- a/index.html
+++ b/index.html
@@ -225,12 +225,16 @@
             <h2>Recent News</h2>
             <div class="news-list" id="newsList">
                 <div class="news-item">
+                    <strong>March 18, 2025:</strong> 
+                    <span>Published a paper in IEEE Consumer Electronics Magazine on electric vehicles in the AI era.</span>
+                </div>
+                <div class="news-item">
                     <strong>March 12, 2025:</strong> 
                     <span>Delivered two keynote speeches on AI for Networking in Johannesburg, South Africa.</span>
                 </div>
                 <div class="news-item">
                     <strong>March 5, 2025:</strong> 
-                    <span>Published paper in IEEE Consumer Electronics Magazine about large-scale environment scanning. Congratulations to Mengyuan!</span>
+                    <span>Published a paper in IEEE Consumer Electronics Magazine about large-scale environment scanning. Congratulations to Mengyuan!</span>
                 </div>
                 <div class="news-item">
                     <strong>February, 2025:</strong> 
@@ -238,7 +242,7 @@
                 </div>
                 <div class="news-item">
                     <strong>February, 2025:</strong> 
-                    <span>Published paper in ACM Transactions on Multimedia Computing, Communications, and Applications.</span>
+                    <span>Published a paper in ACM Transactions on Multimedia Computing, Communications, and Applications.</span>
                 </div>
                 <div class="news-item">
                     <strong>February, 2025:</strong> 
