--- a/publications.html
+++ b/publications.html
@@ -107,7 +107,12 @@
             <h1>Recent Publications</h1>
             <ol class="publications-list">
                 <li>
-                    <strong>"Empirical studies of large scale environment scanning "</strong><br>
+                    <strong>"Electric vehicles: Frontier of consumer electronics"</strong><br>
+                    Haiwei Dong*, Lin Yang, Yufan Zhou, Abdulmotaleb El Saddik<br>
+                    <em>IEEE Consumer Electronics Magazine</em>, 2025 (accepted)
+                </li>
+                <li>
+                    <strong>"Empirical studies of large scale environment scanning"</strong><br>
                     Mengyuan Wang, Yang Liu, Haopeng Wang, Haiwei Dong*, Abdulmotaleb El Saddik<br>
                     <em>IEEE Consumer Electronics Magazine</em>, 2025 (accepted)
                 </li>
