--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
             <h2>Recent News</h2>
             <div class="news-list" id="newsList">
                 <div class="news-item">
+                    <strong>March 23, 2025:</strong> 
+                    <span>Published a paper in IEEE Transactions on Computational Social Systems about reinforcement learning based metaverse streaming. Congratulations to Zijian!</span>
+                </div>
+                <div class="news-item">
                     <strong>March 18, 2025:</strong> 
                     <span>Published a paper in IEEE Consumer Electronics Magazine on electric vehicles in the AI era.</span>
                 </div>
