--- a/publications.html
+++ b/publications.html
@@ -107,6 +107,11 @@
             <h1>Recent Publications</h1>
             <ol class="publications-list">
                 <li>
+                    <strong>"Adaptive social metaverse streaming based on federated multi-agent deep reinforcement learning"</strong><br>
+                    Zijian Long, Haopeng Wang, Haiwei Dong*, Abdulmotaleb El Saddik<br>
+                    <em>IEEE Transactions on Computational Social Systems</em>, 2025 (accepted)
+                </li>
+                <li>
                     <strong>"Electric vehicles: Frontier of consumer electronics"</strong><br>
                     Haiwei Dong*, Lin Yang, Yufan Zhou, Abdulmotaleb El Saddik<br>
                     <em>IEEE Consumer Electronics Magazine</em>, 2025 (accepted)
